# spectrum

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
Doc/: API.md  Full.md  Quick.md  fft_func_API.md  fft_func_Full.md  fft_func_Quick.md  filters_API.md  filters_Full.md  filters_Quick.md  filters_README.md  filters_gpu_research.md  lch_farrow_API.md  lch_farrow_Full.md  lch_farrow_Quick.md  lch_farrow_README.md  lch_farrow_МНК_фазы_beat.md
Results/Profiler/Gate3_FFT_v2/: gate3_fft.json  gate3_fft.md
cmake/: DspSpectrumConfig.cmake.in  version.cmake
include/dsp/spectrum/: complex_to_mag_phase_rocm.hpp  fft_processor_types.hpp
include/dsp/spectrum/filters/: kalman_filter_rocm.hpp
include/dsp/spectrum/kernels/: complex_to_mag_phase_kernels_rocm.hpp  lch_farrow_kernels_rocm.hpp
include/dsp/spectrum/operations/: compute_magnitudes_op.hpp  mag_phase_op.hpp  magnitude_op.hpp  spectrum_post_op.hpp
include/dsp/spectrum/pipelines/: all_maxima_pipeline_rocm.hpp
include/dsp/spectrum/processors/: spectrum_processor_rocm.hpp
include/dsp/spectrum/types/: fft_modes.hpp  fft_params.hpp  fft_types.hpp  filter_types.hpp  mag_phase_types.hpp  spectrum_modes.hpp  spectrum_params.hpp  spectrum_result_types.hpp  spectrum_types.hpp
include/dsp/spectrum/utils/: rocm_profiling_helpers.hpp
include/spectrum/: complex_to_mag_phase_rocm.hpp  fft_processor_rocm.hpp  fft_processor_types.hpp  lch_farrow.hpp  lch_farrow_rocm.hpp
include/spectrum/factory/: spectrum_processor_factory.hpp
include/spectrum/filters/: fir_filter_rocm.hpp  iir_filter_rocm.hpp  kalman_filter_rocm.hpp  kaufman_filter_rocm.hpp  moving_average_filter_rocm.hpp
include/spectrum/interface/: i_all_maxima_pipeline.hpp  i_spectrum_processor.hpp  spectrum_input_data.hpp  spectrum_maxima_types.h
include/spectrum/kernels/: all_maxima_kernel_sources_rocm.hpp  complex_to_mag_phase_kernels_rocm.hpp  fft_kernel_sources_rocm.hpp  fft_processor_kernels_rocm.hpp  fir_kernels_rocm.hpp  iir_kernels_rocm.hpp  kalman_kernels_rocm.hpp  kaufman_kernels_rocm.hpp  lch_farrow_kernels_rocm.hpp  moving_average_kernels_rocm.hpp
include/spectrum/operations/: compute_magnitudes_op.hpp  mag_phase_op.hpp  magnitude_op.hpp  pad_data_op.hpp  spectrum_pad_op.hpp  spectrum_post_op.hpp
include/spectrum/pipelines/: all_maxima_pipeline_rocm.hpp
include/spectrum/processors/: spectrum_processor_rocm.hpp
include/spectrum/types/: fft_modes.hpp  fft_params.hpp  fft_results.hpp  fft_types.hpp  filter_modes.hpp  filter_params.hpp  filter_types.hpp  mag_phase_types.hpp  spectrum_modes.hpp  spectrum_params.hpp  spectrum_profiling.hpp  spectrum_result_types.hpp  spectrum_types.hpp  window_type.hpp
include/spectrum/utils/: cpu_fft.hpp  rocm_profiling_helpers.hpp  scoped_hip_event.hpp
modules/fft_func/kernels/gfx1201/: FFTProc_kernels.cl  manifest.json
modules/lch_farrow/kernels/gfx1201/: LchFarrow_kernels.cl  manifest.json
python/: CMakeLists.txt  dsp_spectrum_module.cpp  py_complex_to_mag_rocm.hpp  py_cpu_fft.hpp  py_fft_processor_rocm.hpp  py_filters.hpp  py_filters_adaptive_rocm.hpp  py_filters_rocm.hpp  py_lch_farrow.hpp  py_lch_farrow_rocm.hpp  py_spectrum_maxima_finder_rocm.hpp  t_cpu_fft.py  test_cpu_fft.py
src/fft_func/: CMakeLists.txt
src/fft_func/include/: fft_processor_rocm.hpp
src/fft_func/include/factory/: spectrum_processor_factory.hpp
src/fft_func/include/interface/: i_all_maxima_pipeline.hpp  spectrum_input_data.hpp  spectrum_maxima_types.h
src/fft_func/include/kernels/: all_maxima_kernel_sources_rocm.hpp  fft_processor_kernels_rocm.hpp
src/fft_func/include/operations/: pad_data_op.hpp  spectrum_pad_op.hpp
src/fft_func/kernels/: C2MP_kernels.cl  SpectrumMaxima_kernels.cl  c2mp_kernels.hip  fft_processor_kernels.hip  manifest.json
src/fft_func/src/: all_maxima_pipeline_rocm.cpp  complex_to_mag_phase_rocm.cpp  fft_processor_rocm.cpp  spectrum_processor_factory.cpp  spectrum_processor_rocm.cpp
src/fft_func/tests/: README.md  all_test.hpp  fft_maxima_benchmark_rocm.hpp  fft_processor_benchmark_rocm.hpp  test_fft_benchmark_rocm.hpp  test_fft_matrix_rocm.hpp  test_fft_maxima_benchmark_rocm.hpp  test_helpers_rocm.hpp  test_process_magnitude_rocm.hpp  test_spectrum_maxima_rocm.hpp
src/filters/: CMakeLists.txt
src/filters/include/filters/: fir_filter_rocm.hpp  iir_filter_rocm.hpp  kaufman_filter_rocm.hpp  moving_average_filter_rocm.hpp
src/filters/include/types/: filter_params.hpp
src/filters/kernels/: FIR_kernels.cl  IIR_kernels.cl  KAMA_kernels.cl  Kalman_kernels.cl  SMA_kernels.cl  manifest.json
src/filters/src/: fir_filter_rocm.cpp  iir_filter_rocm.cpp  kalman_filter_rocm.cpp  kaufman_filter_rocm.cpp  moving_average_filter_rocm.cpp
src/filters/tests/: README.md  all_test.hpp  filters_benchmark_rocm.hpp  test_filters_rocm.hpp  test_fir_basic.hpp  test_kalman_rocm.hpp  test_kaufman_rocm.hpp  test_moving_average_rocm.hpp
src/lch_farrow/: CMakeLists.txt  lagrange_matrix_48x5.json
src/lch_farrow/include/: lch_farrow.hpp  lch_farrow_rocm.hpp
src/lch_farrow/kernels/: LchFarrow_kernels_00.cl  manifest.json
src/lch_farrow/src/: lch_farrow_rocm.cpp
src/lch_farrow/tests/: README.md  all_test.hpp  test_lch_farrow_benchmark_rocm.hpp  test_lch_farrow_rocm.hpp
tests/: CMakeLists.txt  all_test.hpp  fft_maxima_benchmark_rocm.hpp  fft_processor_benchmark_rocm.hpp  filters_benchmark_rocm.hpp  lch_farrow_benchmark_rocm.hpp  main.cpp  test_complex_to_mag_phase_rocm.hpp  test_fft_benchmark_rocm.hpp  test_fft_cpu_reference_rocm.hpp  test_fft_matrix_rocm.hpp  test_fft_maxima_benchmark_rocm.hpp  test_fft_processor_rocm.hpp  test_filters_benchmark_rocm.hpp  test_filters_rocm.hpp  test_fir_basic.hpp  test_gate3_fft_profiler_v2.hpp  test_helpers_rocm.hpp  test_kalman_rocm.hpp  test_kaufman_rocm.hpp  test_lch_farrow_benchmark_rocm.hpp  test_lch_farrow_rocm.hpp  test_moving_average_rocm.hpp  test_process_magnitude_rocm.hpp  test_spectrum_maxima_rocm.hpp
